worked on the student page

--- a/students.html
+++ b/students.html
@@ -66,10 +66,10 @@
                         <span id="current-date">Loading...</span>
                     </div>
                     <div class="admin-profile">
-                        <img src="assets/images/admin-avatar.png" alt="Admin" class="avatar">
+                        <img src="assets/img/sister3.jpg" alt="Admin" class="avatar">
                         <div class="admin-info">
-                            <span id="admin-name">Admin User</span>
-                            <span id="admin-role">Administrator</span>
+                            <span id="admin-name">Super Administrator</span>
+                            <span id="admin-role">Rev. Sr. Victoria Ogunwande OSF.</span>
                         </div>
                     </div>
                 </div>
