worked on the mission and the ages for creche

--- a/about.html
+++ b/about.html
@@ -107,12 +107,13 @@
         <div class="about-hero-content">
           <div class="about-hero-text">
             <p>
-              Franciscan Catholic Nursery and Primary School is a school that nurtures young
-              minds and shapes future leaders through a holistic education
-              rooted in Catholic values. Founded by the Franciscan Sisters of
-              the Immaculate Conception, our school began with a vision to
-              provide quality education that develops not only academic
-              excellence but also spiritual growth and character formation.
+              Franciscan Catholic Nursery and Primary School is a school that
+              nurtures young minds and shapes future leaders through a holistic
+              education rooted in Catholic values. Founded by the Franciscan
+              Sisters of the Immaculate Conception, our school began with a
+              vision to provide quality education that develops not only
+              academic excellence but also spiritual growth and character
+              formation.
             </p>
             <!-- <p>
               Over the years, we have grown from a small parish school to a
@@ -123,9 +124,11 @@
               feels valued and encouraged to reach their full potential.
             </p> -->
             <p>
-              Franciscan Catholic Nursery and Primary School hopes to continue to build on its rich Franciscan
-              tradition while embracing innovative teaching methods to prepare
-              students for the challenges of the 21st century. <!-- Our graduates
+              Franciscan Catholic Nursery and Primary School hopes to continue
+              to build on its rich Franciscan tradition while embracing
+              innovative teaching methods to prepare students for the challenges
+              of the 21st century.
+              <!-- Our graduates
               consistently demonstrate not only academic achievement but also
               strong moral character and a commitment to service. -->
             </p>
@@ -246,9 +249,14 @@
             </div>
             <h3>Our Mission</h3>
             <p>
-              "To develop the whole person within a Christian atmosphere through
-              holistic formation—human and spiritual—while promoting peace,
-              justice, harmony, and equity in society."
+              "Franciscan Catholic Nursery and Primary School is missioned to
+              developing the whole person within the Christian atmosphere
+              through the provision of holistic formation, human and spiritual.
+              We promote in our learners the cause of peace, justice, harmony
+              and equity in the society. Our belief in the uniqueness of every
+              child facilitates his/her maximum growth, development of his/her
+              God given talents and potentials to be useful to himself/herself
+              and his/her society"
             </p>
           </div>
 
@@ -430,18 +438,20 @@
               <div class="ethos-item">
                 <div class="ethos-header">
                   <i class="fas fa-globe-americas"></i>
-                  <h3>Global Citizenship</h3>
+                  <h3>Child Protection Policy Statement</h3>
                   <button class="expand-btn">
                     <i class="fas fa-plus"></i>
                   </button>
                 </div>
                 <div class="ethos-body">
                   <p>
-                    We prepare students to be responsible global citizens who
-                    understand diverse cultures, care for the environment, and
-                    contribute positively to society. Through service projects
-                    and community engagement, students learn to put their faith
-                    into action.
+                    Every child shall be cherished and affirmed as a gift from
+                    God with an inherent right to dignity of life and bodily
+                    integrity which shall be respected, nurtured and protected
+                    by all. That the safety or wellbeing of a child is paramount
+                    and must take priority at all times. Everyone has an
+                    obligation to ensure that the fundamental rights of children
+                    are respected.
                   </p>
                 </div>
               </div>
@@ -496,9 +506,7 @@
                 </div>
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <p>
-                Quality Catholic Education Rooted in Franciscan Values
-              </p>
+              <p>Quality Catholic Education Rooted in Franciscan Values</p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -566,7 +574,10 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
+                <li>
+                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
+                  5251
+                </li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancatholicschool
