--- a/home.html
+++ b/home.html
@@ -277,17 +277,17 @@
         <div class="programmes-container">
           <div class="programme-card early-years">
             <div class="programme-content">
-              <h3>Early Years (Ages 1-5)</h3>
+              <h3>Early Years</h3>
               <p>
                 A nurturing environment where young children develop
                 foundational skills through play-based learning and guided
                 activities.
               </p>
               <ul>
-                <li><i class="fas fa-check-circle"></i> Creche (Ages 1-2)</li>
-                <li><i class="fas fa-check-circle"></i> Pre-Nursery (Ages 2-3)</li>
-                <li><i class="fas fa-check-circle"></i> Nursery 1 (Ages 3-4)</li>
-                <li><i class="fas fa-check-circle"></i> Nursery 2 (Ages 4-5)</li>
+                <li><i class="fas fa-check-circle"></i> Creche (Age 1)</li>
+                <li><i class="fas fa-check-circle"></i> Early Year 1 (Age 2)</li>
+                <li><i class="fas fa-check-circle"></i> Early Year 2 (Ages 3)</li>
+                <li><i class="fas fa-check-circle"></i> Early Year 3 (Age 4)</li>
               </ul>
               <a href="earlyyear.html" class="btn-programme">Learn More</a>
             </div>
@@ -301,7 +301,7 @@
               <img src="assets/img/new5.png" alt="Primary Learners" />
             </div>
             <div class="programme-content">
-              <h3>Primary Education (Ages 5-11)</h3>
+              <h3>Primary Education</h3>
               <p>
                 A comprehensive curriculum that builds strong academic
                 foundations while developing critical thinking and
