changed some things in early years

--- a/programme.html
+++ b/programme.html
@@ -148,7 +148,6 @@
           <div class="early-years-content">
             <div class="section-header text-left">
               <h2>Early Years Programme</h2>
-              <h3 class="age-range">(Ages 1 – 5 years)</h3>
               <div class="divider-left">
                 <span class="divider-line"></span>
                 <i class="fas fa-cross"></i>
@@ -168,12 +167,6 @@
                 and development, enabling our educators to plan learning that is
                 appropriate for each child at every stage of their development
                 through a range of engaging activities.
-              </p>
-              <p>
-                The aim of our Early Years Programme is to help children achieve
-                the five outcomes of the "EVERY CHILD MATTERS" principle while
-                nurturing their spiritual growth and character development in a
-                Catholic environment.
               </p>
               <div class="programme-features">
                 <div class="programme-feature">
@@ -211,7 +204,7 @@
               </div>
               <h4>Creche</h4>
               <p>Playgroup 1 & 2</p>
-              <span class="level-age">Ages 1-2 years</span>
+              <span class="level-age">Age 1</span>
               <a href="creche.html" class="level-link"
                 >Explore <i class="fas fa-arrow-right"></i
               ></a>
