made wholesome changes to the whole project

--- a/creche.html
+++ b/creche.html
@@ -54,15 +54,8 @@
             >Programmes <i class="fas fa-chevron-down"></i
           ></a>
           <div class="dropdown-content">
-            <div class="nested-dropdown">
-              <a href="earlyyear.html" class="nested-trigger active"
-                >Early Years <i class="fas fa-chevron-right"></i
-              ></a>
-              <div class="nested-content">
-                <a href="creche.html" class="active">Creche</a>
-                <a href="preschool.html">PreSchool</a>
-              </div>
-            </div>
+            <a href="creche.html" class="active">Creche</a>
+            <a href="earlyyear.html">Early Years</a>
             <a href="primary.html">Primary</a>
           </div>
         </div>
@@ -713,11 +706,11 @@
               <div class="next-step-icon">
                 <i class="fas fa-child"></i>
               </div>
-              <h3>Explore PreSchool</h3>
+              <h3>Explore Early Years</h3>
               <p>
                 Learn about the next stage in your child's educational journey at Franciscan Catholic School.
               </p>
-              <a href="preschool.html" class="btn-secondary">PreSchool Programme <i class="fas fa-arrow-right"></i></a>
+              <a href="earlyyear.html" class="btn-secondary">Early Years Programme <i class="fas fa-arrow-right"></i></a>
             </div>
             
             <div class="next-step-card">
@@ -807,15 +800,11 @@
                   >
                 </li>
                 <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Pre-School</a
+                  <a href="earlyyear.html"
+                    ><i class="fas fa-angle-right"></i> Early Years</a
                   >
                 </li>
-                <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Nursery</a
-                  >
-                </li>
+
                 <li>
                   <a href="primary.html"
                     ><i class="fas fa-angle-right"></i> Primary School</a
