--- a/earlyyear.html
+++ b/earlyyear.html
@@ -47,7 +47,7 @@
           <div class="dropdown-content">
             <a href="welcome.html">Welcome Note</a>
             <a href="corevalues.html">Our Core Values</a>
-            <a href="history.html">Our History</a>
+
           </div>
         </div>
         <div class="dropdown">
@@ -55,19 +55,12 @@
             >Programmes <i class="fas fa-chevron-down"></i
           ></a>
           <div class="dropdown-content">
-            <div class="nested-dropdown">
-              <a href="earlyyear.html" class="nested-trigger active"
-                >Early Years <i class="fas fa-chevron-right"></i
-              ></a>
-              <div class="nested-content">
-                <a href="creche.html">Creche</a>
-                <a href="preschool.html">PreSchool</a>
-              </div>
-            </div>
+            <a href="creche.html">Creche</a>
+            <a href="earlyyear.html" class="active">Early Years</a>
             <a href="primary.html">Primary</a>
           </div>
         </div>
-        <a href="gallery.html">Gallery</a>
+        <!-- <a href="gallery.html">Gallery</a> -->
         <a href="contact.html">Contact</a>
         <a href="portal.html" class="portal-btn">Portal</a>
       </div>
@@ -134,9 +127,9 @@
             </p>
 
             <div class="programme-buttons">
-              <a href="creche.html" class="cta-button">Creche (Ages 1-2)</a>
-              <a href="preschool.html" class="btn-secondary"
-                >PreSchool (Ages 3-4)</a
+              <a href="creche.html" class="cta-button">Creche (Age 1)</a>
+              <a href="contact.html" class="btn-secondary"
+                >Learn More About Our Programme</a
               >
             </div>
           </div>
@@ -172,16 +165,15 @@
                 src="assets/img/creche.png"
                 alt="Creche Programme"
               />
-              <div class="programme-age">Ages 1-2</div>
+              <div class="programme-age">Age 1</div>
             </div>
             <div class="programme-content">
               <h3>Creche</h3>
               <p>
                 Our Creche is a fantastic place for your child to take their
                 first steps on the educational ladder and learn to interact with
-                other children in a safe, nurturing environment. We believe in a
-                holistic approach to teaching young children, encompassing all
-                their needs at this crucial early stage of development.
+                other children in a safe, nurturing environment. Foundation stage
+                for early development and exploration.
               </p>
               <ul class="programme-features">
                 <li>
@@ -192,12 +184,10 @@
                   <i class="fas fa-check-circle"></i> 1:8 teacher to child ratio
                 </li>
                 <li>
-                  <i class="fas fa-check-circle"></i> Development of social and
-                  communication skills
+                  <i class="fas fa-check-circle"></i> Sensory play and exploration
                 </li>
                 <li>
-                  <i class="fas fa-check-circle"></i> Introduction to sensory
-                  play and exploration
+                  <i class="fas fa-check-circle"></i> Basic social skills development
                 </li>
               </ul>
               <a href="creche.html" class="btn-programme"
@@ -210,38 +200,33 @@
             <div class="programme-image">
               <img
                 src="assets/img/preschool.png"
-                alt="PreSchool Programme"
+                alt="Early Years Programme"
               />
-              <div class="programme-age">Ages 3-4</div>
+              <div class="programme-age">Ages 2-4</div>
             </div>
             <div class="programme-content">
-              <h3>PreSchool</h3>
+              <h3>Early Years (Years 1, 2 & 3)</h3>
               <p>
-                Our PreSchool programme builds upon the foundation established
-                in Creche, offering structured learning experiences that prepare
-                children for formal education. Through play-based activities and
-                guided discovery, children develop essential skills while
-                nurturing their natural curiosity and creativity.
+                Our comprehensive Early Years programme includes three progressive levels:
+                Early Year 1 (Age 2), Early Year 2 (Age 3), and Early Year 3 (Age 4).
+                Each level builds upon the previous, preparing children for primary education
+                through structured learning and play-based activities.
               </p>
               <ul class="programme-features">
                 <li>
+                  <i class="fas fa-check-circle"></i> Progressive learning stages
+                </li>
+                <li>
                   <i class="fas fa-check-circle"></i> Phonics and early literacy
-                  development
                 </li>
                 <li>
-                  <i class="fas fa-check-circle"></i> Introduction to numbers
-                  and mathematical concepts
+                  <i class="fas fa-check-circle"></i> Mathematical concepts introduction
                 </li>
                 <li>
-                  <i class="fas fa-check-circle"></i> Development of fine and
-                  gross motor skills
-                </li>
-                <li>
-                  <i class="fas fa-check-circle"></i> Spiritual and moral
-                  development through Catholic values
+                  <i class="fas fa-check-circle"></i> Catholic values integration
                 </li>
               </ul>
-              <a href="preschool.html" class="btn-programme"
+              <a href="contact.html" class="btn-programme"
                 >Learn More <i class="fas fa-arrow-right"></i
               ></a>
             </div>
@@ -792,10 +777,10 @@
             <div class="next-step-icon">
               <i class="fas fa-child"></i>
             </div>
-            <h3>Explore PreSchool</h3>
-            <p>Learn more about our programme for children ages 3-4.</p>
-            <a href="preschool.html" class="btn-secondary">
-              Visit PreSchool Programme <i class="fas fa-arrow-right"></i>
+            <h3>Contact Us</h3>
+            <p>Get more information about our Early Years programme levels.</p>
+            <a href="contact.html" class="btn-secondary">
+              Contact Us <i class="fas fa-arrow-right"></i>
             </a>
           </div>
 
@@ -854,11 +839,11 @@
                     ><i class="fas fa-angle-right"></i> Our Programmes</a
                   >
                 </li>
-                <li>
+                <!-- <li>
                   <a href="gallery.html"
                     ><i class="fas fa-angle-right"></i> Gallery</a
                   >
-                </li>
+                </li> -->
                 <li>
                   <a href="contact.html"
                     ><i class="fas fa-angle-right"></i> Contact Us</a
@@ -876,8 +861,8 @@
                   >
                 </li>
                 <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Pre-School</a
+                  <a href="earlyyear.html"
+                    ><i class="fas fa-angle-right"></i> Early Years</a
                   >
                 </li>
                 <li>
@@ -895,7 +880,7 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 912 660 5391</li>
+                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancatholicschool
