--- a/about.html
+++ b/about.html
@@ -15,6 +15,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/franciscan.css" />
+    <style>
+      .footer-content {
+        display: flex;
+        gap: 2rem;
+        align-items: stretch;
+        flex-wrap: nowrap;
+      }
+      @media (max-width: 768px) {
+        .footer-content {
+          flex-direction: column;
+        }
+      }
+    </style>
   </head>
 
   <body>
@@ -53,15 +66,8 @@
             >Programmes <i class="fas fa-chevron-down"></i
           ></a>
           <div class="dropdown-content">
-            <div class="nested-dropdown">
-              <a href="earlyyear.html" class="nested-trigger"
-                >Early Years <i class="fas fa-chevron-right"></i
-              ></a>
-              <div class="nested-content">
-                <a href="creche.html">Creche</a>
-                <a href="preschool.html">PreSchool</a>
-              </div>
-            </div>
+            <a href="creche.html">Creche</a>
+            <a href="earlyyear.html">Early Years</a>
             <a href="primary.html">Primary</a>
           </div>
         </div>
@@ -107,12 +113,13 @@
         <div class="about-hero-content">
           <div class="about-hero-text">
             <p>
-              Franciscan Catholic Nursery and Primary School is a school that nurtures young
-              minds and shapes future leaders through a holistic education
-              rooted in Catholic values. Founded by the Franciscan Sisters of
-              the Immaculate Conception, our school began with a vision to
-              provide quality education that develops not only academic
-              excellence but also spiritual growth and character formation.
+              Franciscan Catholic Nursery and Primary School is a school that
+              nurtures young minds and shapes future leaders through a holistic
+              education rooted in Catholic values. Founded by the Franciscan
+              Sisters of the Immaculate Conception, our school began with a
+              vision to provide quality education that develops not only
+              academic excellence but also spiritual growth and character
+              formation.
             </p>
             <!-- <p>
               Over the years, we have grown from a small parish school to a
@@ -123,9 +130,11 @@
               feels valued and encouraged to reach their full potential.
             </p> -->
             <p>
-              Franciscan Catholic Nursery and Primary School hopes to continue to build on its rich Franciscan
-              tradition while embracing innovative teaching methods to prepare
-              students for the challenges of the 21st century. <!-- Our graduates
+              Franciscan Catholic Nursery and Primary School hopes to continue
+              to build on its rich Franciscan tradition while embracing
+              innovative teaching methods to prepare students for the challenges
+              of the 21st century.
+              <!-- Our graduates
               consistently demonstrate not only academic achievement but also
               strong moral character and a commitment to service. -->
             </p>
@@ -258,9 +267,9 @@
             </div>
             <h3>Our Vision</h3>
             <p>
-              "To develop the whole person within a Christian atmosphere through
-              holistic formation—human and spiritual—while promoting peace,
-              justice, harmony, and equity in society."
+              "The belief that the uniqueness of every child facilitates his/her
+              maximum growth, development of his/her God given talents and
+              potentials to be useful to himself/herself and his/her society"
             </p>
           </div>
 
@@ -496,9 +505,7 @@
                 </div>
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <p>
-                Quality Catholic Education Rooted in Franciscan Values
-              </p>
+              <p>Quality Catholic Education Rooted in Franciscan Values</p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -542,13 +549,8 @@
                   >
                 </li>
                 <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Pre-School</a
-                  >
-                </li>
-                <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  <a href="earlyyear.html"
+                    ><i class="fas fa-angle-right"></i> Early Years</a
                   >
                 </li>
                 <li>
@@ -566,10 +568,13 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
+                <li>
+                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
+                  5251
+                </li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool
+                  info@franciscancnps.org
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
