--- a/corevalues.html
+++ b/corevalues.html
@@ -17,6 +17,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/franciscan.css" />
+    <style>
+      .footer-content {
+        display: flex;
+        gap: 2rem;
+        align-items: stretch;
+        flex-wrap: nowrap;
+      }
+      @media (max-width: 768px) {
+        .footer-content {
+          flex-direction: column;
+        }
+      }
+    </style>
   </head>
   <body>
     <!-- Navbar begins -->
@@ -54,15 +67,8 @@
             >Programmes <i class="fas fa-chevron-down"></i
           ></a>
           <div class="dropdown-content">
-            <div class="nested-dropdown">
-              <a href="earlyyear.html" class="nested-trigger"
-                >Early Years <i class="fas fa-chevron-right"></i
-              ></a>
-              <div class="nested-content">
-                <a href="creche.html">Creche</a>
-                <a href="preschool.html">PreSchool</a>
-              </div>
-            </div>
+            <a href="creche.html">Creche</a>
+            <a href="earlyyear.html">Early Years</a>
             <a href="primary.html">Primary</a>
           </div>
         </div>
@@ -479,13 +485,8 @@
                   >
                 </li>
                 <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Pre-School</a
-                  >
-                </li>
-                <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  <a href="earlyyear.html"
+                    ><i class="fas fa-angle-right"></i> Early Years</a
                   >
                 </li>
                 <li>
@@ -509,7 +510,7 @@
                 </li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool
+                  info@franciscancnps.org
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
