--- a/home.html
+++ b/home.html
@@ -15,6 +15,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/franciscan.css" />
+    <style>
+      .footer-content {
+        display: flex;
+        gap: 2rem;
+        align-items: stretch;
+        flex-wrap: nowrap;
+      }
+      @media (max-width: 768px) {
+        .footer-content {
+          flex-direction: column;
+        }
+      }
+    </style>
   </head>
 
   <body>
@@ -53,15 +66,8 @@
             >Programmes <i class="fas fa-chevron-down"></i
           ></a>
           <div class="dropdown-content">
-            <div class="nested-dropdown">
-              <a href="earlyyear.html" class="nested-trigger"
-                >Early Years <i class="fas fa-chevron-right"></i
-              ></a>
-              <div class="nested-content">
-                <a href="creche.html">Creche</a>
-                <a href="preschool.html">PreSchool</a>
-              </div>
-            </div>
+            <a href="creche.html">Creche</a>
+            <a href="earlyyear.html">Early Years</a>
             <a href="primary.html">Primary</a>
           </div>
         </div>
@@ -277,17 +283,17 @@
         <div class="programmes-container">
           <div class="programme-card early-years">
             <div class="programme-content">
-              <h3>Early Years (Ages 1-5)</h3>
+              <h3>Early Years</h3>
               <p>
                 A nurturing environment where young children develop
                 foundational skills through play-based learning and guided
                 activities.
               </p>
               <ul>
-                <li><i class="fas fa-check-circle"></i> Creche (Ages 1-2)</li>
-                <li><i class="fas fa-check-circle"></i> Pre-Nursery (Ages 2-3)</li>
-                <li><i class="fas fa-check-circle"></i> Nursery 1 (Ages 3-4)</li>
-                <li><i class="fas fa-check-circle"></i> Nursery 2 (Ages 4-5)</li>
+                <li><i class="fas fa-check-circle"></i> Creche (Age 1)</li>
+                <li><i class="fas fa-check-circle"></i> Early Year 1 (Age 2)</li>
+                <li><i class="fas fa-check-circle"></i> Early Year 2 (Ages 3)</li>
+                <li><i class="fas fa-check-circle"></i> Early Year 3 (Age 4)</li>
               </ul>
               <a href="earlyyear.html" class="btn-programme">Learn More</a>
             </div>
@@ -301,20 +307,20 @@
               <img src="assets/img/new5.png" alt="Primary Learners" />
             </div>
             <div class="programme-content">
-              <h3>Primary Education (Ages 5-11)</h3>
+              <h3>Primary Education</h3>
               <p>
                 A comprehensive curriculum that builds strong academic
                 foundations while developing critical thinking and
                 problem-solving skills.
               </p>
-              <ul>
+              <!-- <ul>
                 <li>
                   <i class="fas fa-check-circle"></i> Lower Primary (Ages 5-8)
                 </li>
                 <li>
                   <i class="fas fa-check-circle"></i> Upper Primary (Ages 9-11)
                 </li>
-              </ul>
+              </ul> -->
               <a href="primary.html" class="btn-programme">Learn More</a>
             </div>
           </div>
@@ -567,13 +573,8 @@
                   >
                 </li>
                 <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Pre-School</a
-                  >
-                </li>
-                <li>
-                  <a href="preschool.html"
-                    ><i class="fas fa-angle-right"></i> Nursery</a
+                  <a href="earlyyear.html"
+                    ><i class="fas fa-angle-right"></i> Early Years</a
                   >
                 </li>
                 <li>
@@ -591,7 +592,10 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
+                <li>
+                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
+                  5251
+                </li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancnps.org
