Fix footer consistency across creche, early years, and primary pages

--- a/programme.html
+++ b/programme.html
@@ -30,6 +30,19 @@
         }
       }
     </style>
+    <style>
+      .footer-content {
+        display: flex;
+        gap: 2rem;
+        align-items: stretch;
+        flex-wrap: nowrap;
+      }
+      @media (max-width: 768px) {
+        .footer-content {
+          flex-direction: column;
+        }
+      }
+    </style>
   </head>
   <body>
     <!-- Navbar begins -->
