--- a/primary.html
+++ b/primary.html
@@ -17,6 +17,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <link rel="stylesheet" href="assets/css/franciscan.css" />
+    <style>
+      .footer-content {
+        display: flex;
+        gap: 2rem;
+        align-items: stretch;
+        flex-wrap: nowrap;
+      }
+      @media (max-width: 768px) {
+        .footer-content {
+          flex-direction: column;
+        }
+      }
+    </style>
   </head>
   <body>
     <!-- Navbar begins -->
@@ -944,6 +957,7 @@
                   <img
                     src="assets/img/logo.jpg"
                     alt="Franciscan Catholic School Logo"
+                    style="object-fit: cover; width: 100%; height: 100%;"
                   />
                 </div>
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
@@ -1013,10 +1027,13 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
+                <li>
+                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
+                  5251
+                </li>
                 <li>
                   <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool
+                  info@franciscancnps.org
                 </li>
                 <li>
                   <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
