--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -217,7 +217,7 @@
                 <thead>
                   <tr>
                     <th>Receipt ID</th>
-                    <th>Student</th>
+                    <th>Learner</th>
                     <th>Class</th>
                     <th>Amount</th>
                     <th>Status</th>
@@ -244,7 +244,7 @@
               <form class="receipt-form">
                 <div class="form-row">
                   <div class="form-group">
-                    <label for="receipt-student">Student Name</label>
+                    <label for="receipt-student">Learner's Name</label>
                     <input
                       type="text"
                       id="receipt-student"
