--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -252,6 +252,14 @@
                     />
                   </div>
                   <div class="form-group">
+                    <label for="receipt-payer">Payer's Name</label>
+                    <input
+                      type="text"
+                      id="receipt-payer"
+                      placeholder="e.g. Mrs. Johnson (Parent/Guardian)"
+                    />
+                  </div>
+                  <div class="form-group">
                     <label for="receipt-class">Class</label>
                     <input
                       type="text"
