--- a/creche.html
+++ b/creche.html
@@ -745,7 +745,7 @@
               <p>
                 Start the enrollment process for your child today.
               </p>
-              <a href="admissions.html" class="btn-secondary">Apply Now <i class="fas fa-arrow-right"></i></a>
+              <a href="contact.html#admission" class="btn-secondary">Apply Now <i class="fas fa-arrow-right"></i></a>
             </div>
           </div>
         </div>
