--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/dashboard.css" />
     <link rel="stylesheet" href="assets/css/bursar-dashboard.css" />
     <link rel="stylesheet" href="assets/css/receipt-preview.css" />
+    <link rel="stylesheet" href="assets/css/mobile-responsive.css" />
   </head>
   <body class="dashboard-body bursar-dashboard">
     <div class="dashboard-container">
