changed the phone numbers

--- a/welcome.html
+++ b/welcome.html
@@ -352,7 +352,7 @@
                   <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
-                <li><i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768 5251</li>
+                <li><i class="fas fa-phone"></i> 09136538240, 09077685251</li>
                 <li>
                   <i class="fas fa-envelope"></i>
                   info@franciscancnps.org
