--- a/contact.html
+++ b/contact.html
@@ -200,9 +200,8 @@
               <i class="fas fa-phone-alt"></i>
             </div>
             <h3>Call Us</h3>
-            <p>+234 913 653 8240, +234 907 768
-                  5251</p>
-            <a href="tel:+2349136538240" class="contact-link">Call Now</a>
+            <p>09136538240, 09077685251</p>
+            <a href="tel:09136538240" class="contact-link">Call Now</a>
           </div>
 
           <div class="contact-info-card">
@@ -239,7 +238,7 @@
             </p>
             <p><strong>Account Number:</strong> 2006324090</p>
             <p><strong>Bank:</strong> First Bank</p>
-            <a href="tel:+2349126605391" class="contact-link"
+            <a href="tel:09136538240" class="contact-link"
               >Contact School Bursar Payment Queries</a
             >
           </div>
@@ -808,8 +807,7 @@
                   Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
                 </li>
                 <li>
-                  <i class="fas fa-phone"></i> +234 913 653 8240, +234 907 768
-                  5251
+                  <i class="fas fa-phone"></i> 09136538240, 09077685251
                 </li>
                 <li>
                   <i class="fas fa-envelope"></i>
