--- a/portal.html
+++ b/portal.html
@@ -59,7 +59,7 @@
               <i class="fas fa-graduation-cap" style="font-size: 3rem; color: #8B4513; margin-bottom: 1rem;"></i>
               <h3>Coming Soon</h3>
               <p>Student portal will be available once students are enrolled and registered by the administration.</p>
-              <p>For enrollment inquiries, please contact the school office at <strong>+234 913 653 8240</strong></p>
+              <p>For enrollment inquiries, please contact the school office at <strong>09136538240</strong></p>
             </div>
           </div>
 
