worked on the prospectus script

--- a/prospectus.html
+++ b/prospectus.html
@@ -215,13 +215,13 @@
           <h3><i class="fas fa-users"></i> Class Sizes</h3>
           <p><strong>Creche:</strong> Maximum 12 children</p>
           <p><strong>Pre-School:</strong> Maximum 15 children</p>
-          <p><strong>Primary:</strong> Maximum 20 children</p>
+          <!-- <p><strong>Primary:</strong> Maximum 20 children</p> -->
         </div>
         <div class="info-card">
           <h3><i class="fas fa-graduation-cap"></i> Age Groups</h3>
           <p><strong>Creche:</strong> 1-2 years</p>
           <p><strong>Pre-School:</strong> 3-4 years</p>
-          <p><strong>Primary:</strong> 5-11 years</p>
+          <!-- <p><strong>Primary:</strong> 5-11 years</p> -->
         </div>
       </div>
     </div>
