made changes to the picture format

--- a/home.html
+++ b/home.html
@@ -298,7 +298,7 @@
               <a href="earlyyear.html" class="btn-programme">Learn More</a>
             </div>
             <div class="programme-image">
-              <img src="assets/img/new4.png" alt="Early Years Learners" />
+              <img src="assets/img/new4.jpeg" alt="Early Years Learners" />
             </div>
           </div>
 
