--- a/home.html
+++ b/home.html
@@ -304,7 +304,7 @@
 
           <div class="programme-card primary">
             <div class="programme-image">
-              <img src="assets/img/new5.png" alt="Primary Learners" />
+              <img src="assets/img/new5.jpeg" alt="Primary Learners" />
             </div>
             <div class="programme-content">
               <h3>Primary Education</h3>
