made a change to the creche page

--- a/creche.html
+++ b/creche.html
@@ -145,7 +145,7 @@
           </div>
           <div class="creche-intro-image">
             <img
-              src="assets/img/creche.png"
+              src="assets/img/creche.jpeg"
               alt="Creche"
             />
           </div>
