worked on sister's profile

--- a/welcome.html
+++ b/welcome.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -169,7 +169,8 @@
                   <p class="cursive-closing">In Christ's service,</p>
                   <div class="signature-block">
                     <p>
-                      <strong>Rev. Sr. Victoria Mary Ogunwande OSF</strong><br />
+                      <strong>Rev. Sr. Victoria Mary Ogunwande OSF</strong
+                      ><br />
                       Provincial Superior
                     </p>
                   </div>
@@ -189,24 +190,26 @@
                   <h4>Provincial Superior</h4>
                   <div class="profile-bio">
                     <p>
-                      Rev. Sr. Victoria Ogunwade is a dedicated educator and
-                      Provincial Superior of the Franciscan Sisters of the
-                      Immaculate Conception. With over 20 years of experience in
-                      Catholic education, she brings spiritual guidance and
-                      educational expertise to our school community.
+                      Rev. Sr. Victoria Mary Tayo Ogunwande, OSF is a dedicated
+                      educator and the Provincial Superior of the Franciscan
+                      Sisters of the Immaculate Conception. With over twenty
+                      years of experience in Catholic education, she brings rich
+                      spiritual leadership and sound educational expertise to
+                      our school community.
                     </p>
                     <p>
-                      Sister Victoria's vision for Franciscan Catholic School is
-                      rooted in the Catholic tradition of education that
-                      nurtures the whole child - spiritually, intellectually,
-                      emotionally, and physically. Under her leadership, our
-                      school has flourished as a center of academic excellence
+                      Sister Victoria’s vision for Franciscan Catholic School is
+                      deeply rooted in the Catholic tradition of education and
+                      inspired by Franciscan spirituality. Her approach nurtures
+                      the whole child—spiritually, intellectually, emotionally,
+                      and physically. Under her leadership, the school has
+                      continued to flourish as a centre of academic excellence
                       and faith formation.
                     </p>
                     <p>
-                      Her dedication to continuous improvement and innovation in
-                      education ensures that our students receive a modern
-                      education grounded in timeless values.
+                      Her commitment to continuous improvement and innovation in
+                      education ensures that learners receive a modern education
+                      firmly grounded in timeless Christian values.
                     </p>
                   </div>
                   <div class="qualifications">
@@ -217,14 +220,9 @@
                       </h4>
                       <ul>
                         <li>
-                          M.Ed in Educational Leadership - University of Ibadan
+                          M.Ed in Educational Evaluation - University of Ibadan
                         </li>
-                        <li>
-                          B.Ed in Religious Education - University of Lagos
-                        </li>
-                        <li>
-                          Diploma in Catholic School Administration - Rome
-                        </li>
+                        <li>B.Ed in Teacher Education - University of Lagos</li>
                       </ul>
                     </div>
                     <div class="qualification-section">
@@ -233,11 +231,18 @@
                       </h4>
                       <ul>
                         <li>20+ years in Catholic Education</li>
-                        <li>Former Vice Principal at St. Mary's College</li>
                         <li>
-                          Member, Association of Catholic School Administrators
+                          Former Administrator, St. Anthony's Group of Schools,
+                          Ugborikoko, Warri
                         </li>
-                        <li>Coordinator, Diocesan Education Committee</li>
+                        <li>
+                          Former Principal, San Francesco Catholic College,
+                          Ejigbo, Osun State
+                        </li>
+                        <li>
+                          Former Head Teacher, St. Thomas Aquinas Catholic
+                          Nursery and Primary School, Okokomaiko, Lagos.
+                        </li>
                       </ul>
                     </div>
                   </div>
@@ -287,9 +292,7 @@
                 </div>
                 <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
-              <p>
-                Quality Catholic Education Rooted in Franciscan Values
-              </p>
+              <p>Quality Catholic Education Rooted in Franciscan Values</p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
