made some corrections to the profile

--- a/welcome.html
+++ b/welcome.html
@@ -222,7 +222,7 @@
                         <li>
                           M.Ed in Educational Evaluation - University of Ibadan
                         </li>
-                        <li>B.Ed in Teacher Education - University of Lagos</li>
+                        <li>B.Ed in Teacher Education</li>
                       </ul>
                     </div>
                     <div class="qualification-section">
