added pictures to the early years page

--- a/earlyyear.html
+++ b/earlyyear.html
@@ -149,7 +149,7 @@
 
           <div class="introduction-image">
             <img
-              src="assets/img/playlearn.png"
+              src="assets/img/playlearn.jpeg"
               alt="Learning can be fun"
             />
           </div>
@@ -175,7 +175,7 @@
           <div class="programme-card">
             <div class="programme-image">
               <img
-                src="assets/img/creche.png"
+                src="assets/img/creche.jpeg"
                 alt="Creche Programme"
               />
               <div class="programme-age">Age 1</div>
@@ -212,7 +212,7 @@
           <div class="programme-card">
             <div class="programme-image">
               <img
-                src="assets/img/preschool.png"
+                src="assets/img/preschool.jpeg"
                 alt="Early Years Programme"
               />
               <div class="programme-age">Ages 2-4</div>
@@ -366,7 +366,7 @@
         <div class="enabling-environment-container">
           <div class="enabling-environment-image">
             <img
-              src="assets/img/enablinglearningenvironment.png"
+              src="assets/img/environment.jpeg"
               alt="Enabling Learning Environment"
             />
           </div>
