changed the admission picture format

--- a/contact.html
+++ b/contact.html
@@ -355,8 +355,8 @@
           </div>
           <div class="admission-image">
             <img
-              src="assets/img/admission.png"
-              alt="Students at Franciscan Catholic School"
+              src="assets/img/admission.jpeg"
+              alt="Office"
             />
           </div>
         </div>
