--- a/welcome.html
+++ b/welcome.html
@@ -378,7 +378,7 @@
           </p>
           <p>
             Designed by
-            <a href="https://darlingtonodom-portfolio.vercel.app/">Darlculus</a>
+            <a href="https://darlculus.vercel.app/">Darlculus</a>
           </p>
         </div>
       </div>
