--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/dashboard.css" />
     <link rel="stylesheet" href="assets/css/bursar-dashboard.css" />
     <link rel="stylesheet" href="assets/css/receipt-preview.css" />
+    <link rel="stylesheet" href="assets/css/settings-modal.css" />
     <link rel="stylesheet" href="assets/css/mobile-responsive.css" />
   </head>
   <body class="dashboard-body bursar-dashboard">
@@ -513,6 +514,177 @@
 
         </section>
       </main>
+    </div>
+
+    <!-- Settings Modals -->
+    <div class="modal" id="profile-modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Profile Settings</h2>
+          <button class="modal-close" data-modal="profile-modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="profile-photo-section">
+            <div class="current-photo">
+              <img src="assets/img/school bursar.jpg" alt="Profile" id="profile-preview">
+            </div>
+            <div class="photo-actions">
+              <input type="file" id="profile-photo-input" accept="image/*" style="display: none;">
+              <button class="btn-secondary" id="upload-photo-btn">
+                <i class="fas fa-camera"></i> Change Photo
+              </button>
+            </div>
+          </div>
+          <form id="profile-form">
+            <div class="form-group">
+              <label for="profile-name">Full Name</label>
+              <input type="text" id="profile-name" value="Sr. Clare Ohagwa, OSF" required>
+            </div>
+            <div class="form-group">
+              <label for="profile-role">Role</label>
+              <input type="text" id="profile-role" value="Bursar" readonly>
+            </div>
+            <div class="form-group">
+              <label for="profile-email">Email</label>
+              <input type="email" id="profile-email" placeholder="bursar@franciscancnps.org">
+            </div>
+            <div class="form-group">
+              <label for="profile-phone">Phone</label>
+              <input type="tel" id="profile-phone" placeholder="+234 XXX XXX XXXX">
+            </div>
+            <div class="modal-actions">
+              <button type="button" class="btn-outline" data-modal="profile-modal">Cancel</button>
+              <button type="submit" class="btn-primary">Save Changes</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" id="notification-modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Notification Settings</h2>
+          <button class="modal-close" data-modal="notification-modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <form id="notification-form">
+            <div class="toggle-group">
+              <div class="toggle-item">
+                <div>
+                  <h4>Email Notifications</h4>
+                  <p>Receive payment alerts via email</p>
+                </div>
+                <label class="toggle-switch">
+                  <input type="checkbox" id="email-notif" checked>
+                  <span class="toggle-slider"></span>
+                </label>
+              </div>
+              <div class="toggle-item">
+                <div>
+                  <h4>Payment Reminders</h4>
+                  <p>Get notified about pending payments</p>
+                </div>
+                <label class="toggle-switch">
+                  <input type="checkbox" id="payment-reminders" checked>
+                  <span class="toggle-slider"></span>
+                </label>
+              </div>
+              <div class="toggle-item">
+                <div>
+                  <h4>Daily Summary</h4>
+                  <p>Receive daily financial summary reports</p>
+                </div>
+                <label class="toggle-switch">
+                  <input type="checkbox" id="daily-summary">
+                  <span class="toggle-slider"></span>
+                </label>
+              </div>
+            </div>
+            <div class="modal-actions">
+              <button type="button" class="btn-outline" data-modal="notification-modal">Cancel</button>
+              <button type="submit" class="btn-primary">Save Preferences</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" id="security-modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Security Settings</h2>
+          <button class="modal-close" data-modal="security-modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <form id="security-form">
+            <div class="form-group">
+              <label for="current-password">Current Password</label>
+              <input type="password" id="current-password" required>
+            </div>
+            <div class="form-group">
+              <label for="new-password">New Password</label>
+              <input type="password" id="new-password" required minlength="6">
+              <small>Minimum 6 characters</small>
+            </div>
+            <div class="form-group">
+              <label for="confirm-password">Confirm New Password</label>
+              <input type="password" id="confirm-password" required>
+            </div>
+            <div class="modal-actions">
+              <button type="button" class="btn-outline" data-modal="security-modal">Cancel</button>
+              <button type="submit" class="btn-primary">Change Password</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal" id="system-modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>System Preferences</h2>
+          <button class="modal-close" data-modal="system-modal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <form id="system-form">
+            <div class="toggle-group">
+              <div class="toggle-item">
+                <div>
+                  <h4>Dark Mode</h4>
+                  <p>Switch to dark theme</p>
+                </div>
+                <label class="toggle-switch">
+                  <input type="checkbox" id="dark-mode">
+                  <span class="toggle-slider"></span>
+                </label>
+              </div>
+              <div class="toggle-item">
+                <div>
+                  <h4>Auto-Refresh</h4>
+                  <p>Automatically refresh payment data</p>
+                </div>
+                <label class="toggle-switch">
+                  <input type="checkbox" id="auto-refresh" checked>
+                  <span class="toggle-slider"></span>
+                </label>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="currency-format">Currency Format</label>
+              <select id="currency-format">
+                <option value="NGN">Nigerian Naira (₦)</option>
+                <option value="USD">US Dollar ($)</option>
+                <option value="GBP">British Pound (£)</option>
+              </select>
+            </div>
+            <div class="modal-actions">
+              <button type="button" class="btn-outline" data-modal="system-modal">Cancel</button>
+              <button type="submit" class="btn-primary">Save Settings</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
