changed PDF reports

--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -375,7 +375,7 @@
             <div class="card-header">
               <div>
                 <h2>Export Financial Reports</h2>
-                <p>
+                <p style="color: white;">
                   Generate beautifully formatted PDF summaries for leadership.
                 </p>
               </div>
