--- a/bursar-dashboard.html
+++ b/bursar-dashboard.html
@@ -465,7 +465,7 @@
             <div class="card-header">
               <div>
                 <h2>Settings</h2>
-                <p>Manage your account preferences and system configurations.</p>
+                <p style="color: white;">Manage your account preferences and system configurations.</p>
               </div>
             </div>
             <div class="settings-grid">
@@ -474,7 +474,7 @@
                   <i class="fas fa-user"></i>
                 </div>
                 <h3>Profile Settings</h3>
-                <p>Update your personal information and profile picture.</p>
+                <p style="color: white;">Update your personal information and profile picture.</p>
                 <button class="btn-link" id="profile-settings-btn">
                   Edit Profile <i class="fas fa-arrow-right"></i>
                 </button>
@@ -484,7 +484,7 @@
                   <i class="fas fa-bell"></i>
                 </div>
                 <h3>Notifications</h3>
-                <p>Configure email and in-app notification preferences.</p>
+                <p style="color: white;">Configure email and in-app notification preferences.</p>
                 <button class="btn-link" id="notification-settings-btn">
                   Manage Notifications <i class="fas fa-arrow-right"></i>
                 </button>
@@ -494,7 +494,7 @@
                   <i class="fas fa-shield-alt"></i>
                 </div>
                 <h3>Security</h3>
-                <p>Change password and manage security settings.</p>
+                <p style="color: white;">Change password and manage security settings.</p>
                 <button class="btn-link" id="security-settings-btn">
                   Security Settings <i class="fas fa-arrow-right"></i>
                 </button>
@@ -504,7 +504,7 @@
                   <i class="fas fa-cogs"></i>
                 </div>
                 <h3>System Preferences</h3>
-                <p>Customize dashboard appearance and behavior.</p>
+                <p style="color: white;">Customize dashboard appearance and behavior.</p>
                 <button class="btn-link" id="system-settings-btn">
                   System Settings <i class="fas fa-arrow-right"></i>
                 </button>
