--- a/settings.html
+++ b/settings.html
@@ -400,6 +400,7 @@
             }
         });
     </script>
+    <script src="assets/js/api.js"></script>
     <script src="assets/js/settings.js"></script>
   </body>
 </html>
