--- a/teachers.html
+++ b/teachers.html
@@ -410,6 +410,16 @@
                 <!-- Personal Info Tab -->
                 <div id="personal-tab-content" class="tab-content">
                     <div class="form-group">
+                        <label for="title">Title <span class="required">*</span></label>
+                        <select id="title" name="title" required>
+                            <option value="">Select Title</option>
+                            <option value="Rev. Sr.">Rev. Sr.</option>
+                            <option value="Mr.">Mr.</option>
+                            <option value="Mrs.">Mrs.</option>
+                            <option value="Miss">Miss</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
                         <label for="first-name">First Name <span class="required">*</span></label>
                         <input type="text" id="first-name" name="first-name" required>
                     </div>
@@ -572,6 +582,16 @@
                 
                 <!-- Personal Info Tab -->
                 <div id="edit-personal-tab-content" class="tab-content">
+                    <div class="form-group">
+                        <label for="edit-title">Title <span class="required">*</span></label>
+                        <select id="edit-title" name="edit-title" required>
+                            <option value="">Select Title</option>
+                            <option value="Rev. Sr.">Rev. Sr.</option>
+                            <option value="Mr.">Mr.</option>
+                            <option value="Mrs.">Mrs.</option>
+                            <option value="Miss">Miss</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label for="edit-first-name">First Name <span class="required">*</span></label>
                         <input type="text" id="edit-first-name" name="edit-first-name" required>
