--- a/teachers.html
+++ b/teachers.html
@@ -543,10 +543,9 @@
                     <div class="form-group">
                         <label for="role">Role <span class="required">*</span></label>
                         <select id="role" name="role" required>
-                            <option value="Teacher">Teacher</option>
-                            <option value="Head Teacher">Head Teacher</option>
-                            <option value="Subject Coordinator">Subject Coordinator</option>
-                            <option value="Admin">Admin</option>
+                            <option value="teacher">Teacher</option>
+                            <option value="headteacher">Head Teacher</option>
+                            <option value="coordinator">Subject Coordinator</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -706,10 +705,9 @@
                     <div class="form-group">
                         <label for="edit-role">Role <span class="required">*</span></label>
                         <select id="edit-role" name="edit-role" required>
-                            <option value="Teacher">Teacher</option>
-                            <option value="Head Teacher">Head Teacher</option>
-                            <option value="Subject Coordinator">Subject Coordinator</option>
-                            <option value="Admin">Admin</option>
+                            <option value="teacher">Teacher</option>
+                            <option value="headteacher">Head Teacher</option>
+                            <option value="coordinator">Subject Coordinator</option>
                         </select>
                     </div>
                     <div class="form-group">
