teacher count fix test 2

--- a/teachers.html
+++ b/teachers.html
@@ -1226,6 +1226,7 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="assets/js/api.js"></script>
     <script src="assets/js/teachers.js"></script>
 </body>
 </html>
